fix z-index so category icons do not obscure labels

--- a/media/css/mkt/tile.less
+++ b/media/css/mkt/tile.less
@@ -259,6 +259,7 @@
                 position: absolute;
                 bottom: 10%;
                 width: 100%;
+                z-index: 1;
             }
             .icon {
                 width: 100%;
